<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/navy"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/navy"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tvHello"
            app:layout_constraintTop_toTopOf="@id/tvHello"
            tools:text="@string/full_name_haerin" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_setting_text"
            android:padding="8dp"
            android:src="@drawable/ic_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerBanner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvHello"
            android:clipToPadding="false"
            android:paddingEnd="16dp"
            android:paddingStart="16dp" />

        <TextView
            android:id="@+id/tvFeatures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/features"
            android:textColor="@color/navy"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPagerBanner" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardFeatures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvFeatures">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_columnWeight="1">

                    <ImageButton
                        android:id="@+id/btnMedicalResume"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/button_stroke"
                        android:contentDescription="@string/btn_medical_resume"
                        android:src="@drawable/ic_medical_resume" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/medical_resume"
                        android:textColor="@color/navy"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_columnWeight="1">

                    <ImageButton
                        android:id="@+id/btnMedicine"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/button_stroke"
                        android:contentDescription="@string/btn_medicine"
                        android:src="@drawable/ic_medicine" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/medicine"
                        android:textColor="@color/navy"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_columnWeight="1">

                    <ImageButton
                        android:id="@+id/btnHealthServices"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/btn_health_services"
                        android:background="@drawable/button_stroke"
                        android:src="@drawable/ic_health_services" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/health_services"
                        android:textColor="@color/navy"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_columnWeight="1">

                    <ImageButton
                        android:id="@+id/btnArticle"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/button_stroke"
                        android:contentDescription="@string/btn_article"
                        android:src="@drawable/ic_article" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/article"
                        android:textColor="@color/navy"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp" />
                </LinearLayout>
            </GridLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvHotArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/hot_article"
            android:textColor="@color/navy"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardFeatures" />

        <TextView
            android:id="@+id/tvSeeAllArticles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textSize="16sp"
            android:textColor="@color/navy"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvHotArticle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHotArticles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvHotArticle"
            tools:listitem="@layout/item_hot_article" />

        <TextView
            android:id="@+id/tvMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/medicine"
            android:textColor="@color/navy"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvHotArticles"
            android:layout_marginBottom="150dp"/>

        <TextView
            android:id="@+id/tvSeeAllMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="@color/navy"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvMedicine" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMedicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvMedicine"
            tools:listitem="@layout/item_medicine" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>




